# squash-compressor

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/SquashCompressorPlugin/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/ui/squash-ui/: package-lock.json  package.json
plugin/ui/squash-ui/src/: App.css  App.tsx  index.css  main.tsx
plugin/ui/squash-ui/src/components/: AudioRender.tsx  NumberSlider.tsx  SliderGroup.tsx
